# se-toolkit-hackathon

./: .env.example  .gitignore  LICENSE  PLAN.md  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  pyproject.toml
backend/src/exoplanet_explorer/: __init__.py  auth.py  calculator.py  database.py  llm.py  main.py  run.py  settings.py
backend/src/exoplanet_explorer/data/: seed.py
backend/src/exoplanet_explorer/db/: exoplanets.py
backend/src/exoplanet_explorer/models/: exoplanet.py
backend/src/exoplanet_explorer/routers/: exoplanets.py
backend/tests/: conftest.py  test_api_exoplanets.py  test_calculator.py  test_db_exoplanets.py  test_llm.py  test_llm_integration.py
caddy/: Caddyfile
client-web-react/: .dockerignore  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  tsconfig.json  vite.config.ts
client-web-react/src/: App.css  App.tsx
client-web-react/src/api/: client.ts
client-web-react/src/components/: ComparisonModal.tsx  ExoplanetDetail.tsx  ExoplanetList.tsx  FilterPanel.tsx  PlanetOfDay.tsx  PlanetSizeCompare.tsx  PlanetVisual.tsx  StatsCards.tsx  SurvivalCalculator.tsx
client-web-react/src/types/: exoplanet.ts
