[project]
name = "exoplanet-explorer"
version = "0.1.0"
description = "Exoplanet Explorer — browse, filter, and calculate survival metrics for confirmed exoplanets"
requires-python = "==3.14.*"
dependencies = [
  "asyncpg>=0.30.0",
  "fastapi==0.128.7",
  "httpx==0.28.1",
  "pydantic==2.12.5",
  "pydantic-settings==2.12.0",
  "sqlmodel>=0.0.22",
  "uvicorn[standard]==0.40.0",
]

[dependency-groups]
dev = [
  "aiosqlite>=0.21.0",
  "greenlet>=3.2.0",
  "pytest>=8.0.0",
  "pytest-asyncio>=0.24.0",
]

[build-system]
requires = ["setuptools>=75.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = { "" = "src" }

[tool.setuptools.packages.find]
where = ["src"]
include = ["exoplanet_explorer*"]

[tool.pytest.ini_options]
testpaths = ["../tests"]
pythonpath = ["../src"]
asyncio_mode = "auto"
markers = [
    "llm_live: marks tests as requiring a live LLM server (deselect with '-m \"not llm_live\"')",
]
